// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameDetail component If is fetching games or runs, shows a Loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`GameDetail component If selectedGame prop doesn't exist it renders a message explaining that game doesn't exist 1`] = `
<div>
  Ooops, this game does not exist
</div>
`;

exports[`GameDetail component Renders correctly 1`] = `
<div
  className="game-detail"
>
  <img
    alt=""
    className="game-detail-img"
    src="cover-small-uri"
  />
  <span
    className="game-detail-name"
  >
    international-name
  </span>
  <div
    className="game-detail-player"
  >
    player-name
  </div>
  <span
    className="game-detail-runs"
  >
    23
  </span>
  <button
    className="game-detail-video"
  >
    <a
      href="link-uri"
    >
      Video
    </a>
  </button>
</div>
`;
